configuration for application

--- a/Zura/Zura.Application/Zura.Application.csproj
+++ b/Zura/Zura.Application/Zura.Application.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="microsoft.entityframeworkcore" Version="9.0.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Zura.Domain\Zura.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
