--- a/Zura/Zura.Application/Zura.Application.csproj
+++ b/Zura/Zura.Application/Zura.Application.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\Zura.Domain\Zura.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Todo\Queries\" />
+  </ItemGroup>
+
 </Project>
