create error handle and test

--- a/Zura/Zura.Presentation.API/appsettings.json
+++ b/Zura/Zura.Presentation.API/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "ApplicationDbContext": "Data Source=DESKTOP-PL9K5CN;Initial Catalog=Zura;Persist Security Info=True;TrustServerCertificate=True;User ID=sa;Password=Ehsan..1374"
+  }
 }
